--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,7 @@
 = babel-preset-njs
 :npm-name: babel-preset-njs
+:gh-name: jirutka/{npm-name}
+:ci-workflow: npmjs
 :babel-doc-uri: https://babeljs.io/docs/en
 :object-rest-spread-mdn-uri: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Spread_syntax#Spread_in_object_literals
 :array-spread-mdn-uri: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Spread_syntax#Spread_in_array_literals
@@ -7,6 +9,7 @@
 
 ifdef::env-github[]
 image:https://img.shields.io/npm/v/{npm-name}.svg[npm Version, link="https://www.npmjs.org/package/{npm-name}"]
+image:https://github.com/{gh-name}/workflows/{ci-workflow}/badge.svg[CI State, link=https://github.com/{gh-name}/actions?query=workflow%3A%22{ci-workflow}%22]
 endif::env-github[]
 
 A Babel preset for https://github.com/nginx/njs[njs] -- NGINX JavaScript.
