--- a/README.adoc
+++ b/README.adoc
@@ -172,13 +172,13 @@ The *State* column is one of:
 | {not-needed}
 |
 
-| {babel-plugin-uri}-transform-property-mutators[property-mutators]
-| ES5
+| {babel-plugin-uri}-transform-reserved-words[reserved-words]
+| ES3
 | {not-needed}
 |
 
-| {babel-plugin-uri}-transform-reserved-words[reserved-words]
-| ES3
+| {babel-plugin-uri}-transform-property-mutators[property-mutators]
+| ES5
 | {not-needed}
 |
 
@@ -308,7 +308,7 @@ The *State* column is one of:
 | njs doesn’t support generators yet
 
 | {babel-plugin-uri}-transform-dotall-regex[dotall-regex]
-| ES2017
+| ES2018
 | {included}
 |
 
@@ -332,6 +332,16 @@ The *State* column is one of:
 | {included}
 |
 
+| {babel-plugin-uri}-proposal-json-strings[json-strings]
+| ES2019
+|
+|
+
+| {babel-plugin-uri}-proposal-dynamic-import[dynamic-import]
+| ES2020
+|
+|
+
 | {babel-plugin-uri}-proposal-export-namespace-from[export-namespace-from]
 | ES2020
 | {included}
@@ -342,28 +352,38 @@ The *State* column is one of:
 | {not-needed}
 |
 
-| {babel-plugin-uri}-proposal-private-property-in-object[private-property-in-object]
-| ES2020
-| {included}
-|
-
 | {babel-plugin-uri}-proposal-optional-chaining[optional-chaining]
 | ES2020
 | {included}
 |
 
 | {babel-plugin-uri}-proposal-logical-assignment-operators[logical-assignment-operators]
-| https://github.com/tc39/proposal-logical-assignment[Stage 4]
+| ES2021
 | {included}
 |
 
 | {babel-plugin-uri}-proposal-numeric-separator[numeric-separator]
-| https://github.com/tc39/proposal-numeric-separator[Stage 4]
+| ES2021
 | {not-needed}
 |
 
 | {babel-plugin-uri}-proposal-class-properties[class-properties]
-| https://github.com/tc39/proposal-class-fields[Stage 3]
+| ES2022
+| {included}
+|
+
+| {babel-plugin-uri}-proposal-class-static-block[class-static-block]
+| ES2022
+|
+|
+
+| {babel-plugin-uri}-proposal-private-methods[private-methods]
+| ES2022
+|
+|
+
+| {babel-plugin-uri}-proposal-private-property-in-object[private-property-in-object]
+| ES2022
 | {included}
 |
 |===
