--- a/README.adoc
+++ b/README.adoc
@@ -13,7 +13,7 @@ image:https://img.shields.io/npm/v/{npm-name}.svg[npm Version, link="https://www
 image:https://github.com/{gh-name}/workflows/{ci-workflow}/badge.svg[CI State, link=https://github.com/{gh-name}/actions?query=workflow%3A%22{ci-workflow}%22]
 endif::env-github[]
 
-A https://babeljs.io[Babel] https://babeljs.io/docs/en/presets[preset] for transforming JavaScript code with modern language features into code compatible with https://github.com/nginx/njs[njs] ≥0.7.0 (NGINX JavaScript).
+A https://babeljs.io[Babel] https://babeljs.io/docs/en/presets[preset] for transforming JavaScript code with modern language features into code compatible with https://github.com/nginx/njs[njs] (NGINX JavaScript).
 This preset includes support for all the ECMAScript features up to ES2021 -- see <<Plugins>> for a complete list.
 
 **TIP:** Take a look at https://github.com/jirutka/njs-typescript-starter[njs-typescript-starter] for a complete starter template for developing njs scripts for https://nginx.org[NGINX] server in https://www.typescriptlang.org[TypeScript] (including integration tests).
@@ -28,6 +28,16 @@ npm install --save-dev {npm-name}
 # or using yarn:
 yarn add --dev {npm-name}
 ----
+
+
+=== Compatibility Matrix
+
+|===
+| preset-njs    | njs     | Babel
+
+| 0.1.0 – 0.2.1 | ≥ 0.5.0 | 7
+| 0.7.0         | ≥ 0.7.0 | 7
+|===
 
 
 == Usage
